--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -22,10 +22,10 @@ server:
   port: ${APP_PORT:8080}
 
 api:
-  client:
-    url: https://caro.today
   server:
     url: https://api.caro.today
+  cors:
+    allowed-origins: https://caro.today,https://api.caro.today,https://caro-frontend-sigma.vercel.app
 
 jwt:
   secret: ${JWT_SECRET}
